<resources>
    <!-- app wide -->
    <string name="app_name">Workshape</string>
    <string name="conf_file_key">com.lrustudio.workshape.WORKSHAPE_FILE_KEY</string>

    <!-- all activities -->
    <string name="activity_main_title">Workshape</string>
    <string name="activity_edit_title">Edition</string>
    <string name="activity_product_out">Sortie d\'un frigo</string>
    <string name="activity_product_in">Entrée dans un frigo</string>
    <string name="activity_edit_detailed_title">Détail</string>
    <string name="activity_edit_note_title">Note</string>
    <string name="activity_add_title">Ajout</string>
    <string name="activity_configuration_title">Configuration</string>

    <!-- main, scanner and list activities
    -->
    <string name="scan_button">Scanner un produit</string>
    <string name="reference_hint">ou entrer une référence ici</string>
    <string name="turn_on_flashlight">Allumer le Flash</string>
    <string name="turn_off_flashlight">Eteindre le Flash</string>

    <string name="list_button">Lister les produits</string>

    <!-- edit add activity
    -->
    <string name="name">Nom du rouleau</string>
    <string name="qr_code">QR code</string>
    <string name="fournisseur">Fournisseur</string>
    <string name="ref_fourn">Ref. fourn.</string>
    <string name="longueur_initiale">Longueur initiale (m)</string>
    <string name="longueur_actuelle">Longueur actuelle (m)</string>
    <string name="longueur_consommee">Consommé (m)</string>
    <string name="largeur">Largeur (m)</string>
    <string name="grammage">Grammage</string>s
    <string name="lieu_actuel">Lieu actuel</string>
    <string name="lieu_depuis_out">depuis</string>
    <string name="lieu_depuis_in">Sortie depuis</string>
    <string name="date_application">Date d\'application</string>
    <string name="type_de_tissus">Type de tissus</string>
    <string name="date_d_arrivee">Date d\'arrivée</string>
    <string name="transport_frigo">Transport frigo</string>
    <string name="decongele">Nb décongélation</string>
    <string name="temps_hors_gel_total">Tot. hors gel (h:m)</string>
    <string name="hors_gel">Passé hors gel (h:m)</string>
    <string name="produit_sorti">Produit sorti</string>
    <string name="produit_entre">Produit entré</string>
    <string name="produit_cree">Produit créé</string>
    <string name="produit_sauve">Produit sauvé</string>
    <string name="note_sauvee">Note sauvée</string>
    <string name="qrcode_inconnu">QR code inconnu</string>
    <string name="db_err_request">Erreur de la base de données</string>
    <string name="db_err_connection_failed">Erreur de connection à la base de données</string>
    <string name="conf_password_title">"Entrer le mot de passe</string>
    <string name="produit_inconnu">"Produit inconnu\nAppuyer sur '+' pour l'ajouter</string>
    <string name="enter">Entrer</string>
    <string name="cancel">Annuler</string>
    <string name="conf_file_read_error">Configuration illisible - Réinstallez l\'application</string>
    <string name="conf_file_write_error">Impossible de sauver la configuration</string>
    <string name="conf_file_write_done">Configuration sauvegardée</string>
    <string name="sauver_produit">Sauver le produit</string>
    <string name="buttonHistoCongel">Historique</string>
    <string name="internal_problem">Problème interne du logiciel</string>
    <string name="sortir_le_produit">Sortir le produit</string>
    <string name="entrer_le_produit">Entrer le produit</string>
    <string name="sauver_la_note">Sauver la note</string>
    <string name="should_be_decimal">Valeur numérique obligatoire</string>
    <string name="should_be_hhmm">Valeur hh:mm obligatoire</string>
    <string name="hint_date">Choisir une date..</string>

    <string name="modifs_non_sauvees">Le produit a été modifié</string>
    <string name="question_confirmer">Abandonner les modifications ?</string>
    <string name="reponse_rester">Non, rester</string>
    <string name="reponse_abandonner">Oui, abandonner</string>

    <!-- configuration activity -->
    <string name="conf_server_hostname">DB server host</string>
    <string name="conf_server_port">DB server port</string>
    <string name="conf_database_name">DB nom</string>
    <string name="conf_database_user">DB user</string>
    <string name="conf_database_password">DB mot de passe</string>
    <string name="conf_database_timeout">DB timeout (s)</string>
    <string name="conf_lieu_par_defaut">Lieu par défaut</string>
    <string name="conf_flash_par_defaut">Flash par défaut</string>
    <string name="conf_flash_oui">I</string>
    <string name="conf_flash_non">O</string>
    <string name="conf_password">Mot de passe conf</string>
    <string name="conf_dbg_no_db">DEBUG pas de db</string>
    <string name="conf_dbg_simulate_product_new">DEBUG simul new</string>
    <string name="conf_dbg_simulate_product_out">DEBUG simul out</string>
    <string name="conf_dbg_simulate_product_in">DEBUG simul in</string>
    <string name="conf_apply_button">Sauver et sortir</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
